# ctfd-challenges

./: .gitignore  FORMAT.md  README.md
archive/aikidobot/: Dockerfile  challenge.yml
archive/arpattack/: arpattack.c
archive/fiddle/: Dockerfile  README.md  challenge.yml
archive/filesync/: README.md
archive/onekick/: Dockerfile
archive/reflector/: Makefile.in  README  configure  mydiag.c  mydiag.h  reflector  reflector.c  reflector.h
archive/reverxor/: challenge.yml
archive/tcpspoof/: .project  tcpspoof.py
challenges/admitone/: Dockerfile  README.md  admitone-bundle.tgz  challenge.yml
challenges/assemblex/: Dockerfile  README.md  challenge.yml
challenges/babyshot/: Dockerfile  babyshot-bundle.tgz  challenge.yml
challenges/badcrypt/: README.md  challenge.yml
challenges/badtable/: Dockerfile  badtable-bundle.tgz  challenge.yml
challenges/blinddate/: Dockerfile  README.md  challenge.yml
challenges/bombshell/: Dockerfile  README.md  challenge.yml
challenges/c-section/: Dockerfile  c-section-bundle.tgz  challenge.yml
challenges/cerebralcortex/: README.md  challenge.yml  run.sh
challenges/codequill/: Dockerfile  README.md  challenge.yml
challenges/cookiemonster/: Dockerfile  challenge.yml  cookiemonster-bundle.tgz
challenges/doomtemple/: Dockerfile  README.md  challenge.yml  doomtemple-bundle.tgz
challenges/reflector/: AUTHORS  Makefile  Makefile.am  config.status  configure.in
challenges/reflector/.deps/: mydiag.Po
challenges/reflector/autom4te.cache/: requests  traces.0  traces.1
scripts/: build.sh  bundle.sh  run.sh  stop.sh
(+804 files in other folders)
